--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Einsteieg Erstsemester</title>
+    <title>Einstieg Erstsemester</title>
     <link rel="stylesheet" href="Stylesheets/style.css">
     <style>
         #bg-image {
