--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <main>
         <div id="first_section">
             <div id="bg-image"></div>
-            <div id="information">Hallo</div>
+            <div id="information">Hallo"</div>
         </div>
     </main>
 </content>
