--- a/faecher/faecher.html
+++ b/faecher/faecher.html
@@ -15,19 +15,16 @@
 
         main li {
             margin-left: 4em;
+            margin-right: 4em;
             margin-top: 1em;
-            padding: 2em;
+            padding: 1em 2em;
             font-family: sans-serif;
-            //border: 1px solid black;
+            border-radius: 12px;
         }
 
         main span {
             float: left;
-            width: 30%;
-        }
-
-        main img {
-
+            width: 40%;
         }
 
         .image {
@@ -40,6 +37,25 @@
             margin-left: 30em;
         }
 
+        main a {
+            text-decoration: none;
+            color: #424559;
+        }
+
+        #bioinformatik {
+            background: radial-gradient(rgba(52, 185, 216, 0.55), #fff);
+        }
+
+        #informatik {
+            border-radius: 12px;
+            background: radial-gradient(rgba(231, 219, 160, 0.7), #fff);
+        }
+
+        #medizininformatik {
+            border-radius: 12px;
+            background: radial-gradient(rgb(204, 200, 199), #fff);
+        }
+
         .medinfo {
             background-position: 500px 250px;
             background-size: 80%;
@@ -47,6 +63,14 @@
 
         .bioinfo {
             background-position: 250px 0px;
+        }
+
+        .desc_title {
+            font-size: 2em;
+        }
+
+        .description {
+            font-size: 0.95em;
         }
     </style>
 </head>
@@ -82,24 +106,36 @@
     <main>
         <h1>Fächer</h1>
         <ul>
-            <li>
+            <li id="bioinformatik">
                 <span>
-                    <div style="font-size: 2em">Bioinformatik</div>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+                    <div class="desc_title"><a href="bioinformatik.html">Bioinformatik</a></div>
+                    <div class="description">
+                        <p>Der Studiengang Bioinformatik besteht haupstsächlich aus Veranstaltungen aus den Bereichen: Informatik, Mathematik, Biologie und Chemie.  Hierbei werden „Informatik und Mathematik“ und die „Lebens – und Naturwissenschaften“ zu gleichen Teilen gewichtet.</p>
+                        <br><p>Regelstudienzeit sind 6 Semester. Studienbeginn ist sowohl im Wintersemester, als auch im Sommersemester möglich.</p>
+                        <br><p>Wer sich für Informationsverarbeitung im Bereich der Lebenswissenschaften interressiert, oder  eine Forschungskarriere im Bereich Pharmaindustrie, Biotechnologie, Biologie, oder Informatik anstrebt, sollte sich genauer mit dem Studiengang beschäftigen.</p>
+                    </div>
                 </span>
                 <div class="image bioinfo" style="background-image: url('../Images/bioinfo.jpg')"></div>
             </li>
-            <li>
+            <li id="informatik">
                 <span>
-                    <div style="font-size: 2em">Informatik</div>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+                    <div class="desc_title"><a href="informatik.html">Informatik</a></div>
+                    <div class="description">
+                        <p>Das Studium der Informatik beschäftigt sich größtenteils  mit Inhalten der allgemeinen, praktischen, theoretischen und technischen Informatik, sowie der Mathematik. Vermittelt werden außerdem Kenntnisse in einem wählbaren Anwendungsbereich.</p>
+                        <br><p>Regelstudienzeit sind 6 Semester. Studienbeginn ist sowohl im Wintersemester, als auch im Sommersemester möglich.</p>
+                        <br><p>Der Studiengang der Informatik ist besonders geeignet für jeden, der sich für Informationsverarbeitung interressiert, sowie ein Verständnis für Mathematik, logisches Denken und Abstraktionsvermögen aufweisen kann.</p>
+                    </div>
                 </span>
                 <div class="image" style="background-image: url('../Images/informatik.jpg');"></div>
             </li>
-            <li>
+            <li id="medizininformatik">
                 <span>
-                    <div style="font-size: 2em">Medizininformatik</div>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+                    <div class="desc_title"><a href="medizininformatik.html">Medizininformatik</a></div>
+                    <div class="description">
+                        <p>Der Studiengang der Medizininformatik vermittelt hauptsächlich Grundlagen der Informatik, Mathematik, Biologie und Medizin.</p>
+                        <br><p>Regelstudienzeit sind 6 Semester. Studienbeginn ist nur im Wintersemester möglich.</p>
+                        <br><p>Die Zielgruppe des Studiums der Medizininformatik besteht aus Allen, die sich für Informationsverarbeitung im Gesundheitswesen interessieren, oder eine Forschungskarriere im Bereich der medizinischen Informatik anstreben. </p>
+                    </div>
                 </span>
                 <div class="image medinfo" style="background-image: url('../Images/medinfo.jpeg')"></div>
             </li>
