--- a/index.html
+++ b/index.html
@@ -15,15 +15,32 @@
 
         #information {
             position: absolute;
-            text-align: center;
-            background-color: rgba(255,255,255,0.8);
-            top: 10em;
-            right: 8em;
-            padding: 3em;
+            background-color: rgba(255,255,255,0.9);
+            top: 15em;
+            left: 8em;
+            padding: 1em;
             border: 1px solid black;
             border-radius: 5px;
             font-family: sans-serif;
-            font-size: 1.5em;
+            font-size: 1em;
+            width: 25em;
+        }
+
+        #text {
+            padding: 1em;
+            width: 50%;
+            margin-left: 2em;
+            margin-bottom: 5em;
+            float: left;
+        }
+
+        main ul li {
+            margin: 1em;
+        }
+
+        #kupferbau {
+            width: 30%;
+            margin: 2em;
         }
     </style>
 </head>
@@ -59,8 +76,22 @@
     <main>
         <div id="first_section">
             <div id="bg-image"></div>
-            <div id="information">Hallooo</div>
+            <div id="information">
+                <h3>Herzlich willkommen!</h3><br>
+                <p>Hier auf unserer Website „Einstieg – Erstsemester“ findest du Informationen, die dir die ersten Monate des Studentenlebens, als auch den Weg dorthin, erleichtern sollen.</p>
+            </div>
         </div>
+        <div id="text">
+            <h2>Die Website richtet sich an alle Studierenden und Studieninteressierte der Medizininformatik, Bioinformatik und Informatik.</h2><br>
+            <p>Wir bieten Informationen über:</p><br>
+            <ul>
+                <li>Organisation des Studiums</li>
+                <li>Studieninhalte der Bioinformatik, Medizininformatik und Informatik</li>
+                <li>Ansprechpartner bei Problemen</li>
+                <li>Für das Studium relevante Gebäude</li>
+            </ul>
+        </div>
+        <img src="Images/Kupferbau.jpg" id="kupferbau">
     </main>
 </content>
 <footer>
