--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="Stylesheets/style.css">
     <style>
         #bg-image {
-            padding: 270px 0;
+            padding: 40vh 0;
             background-image: url("Images/Campus.jpg");
             background-size: cover;
             background-attachment: fixed;
