--- a/faecher/faecher.html
+++ b/faecher/faecher.html
@@ -30,11 +30,7 @@
         .image {
             height: 20em;
             width: 35em;
-            background-attachment: fixed;
-            background-size: 100%;
-            background-position: right;
-            background-repeat: no-repeat;
-            margin-left: 30em;
+            margin-left: 3em;
         }
 
         main a {
@@ -54,15 +50,6 @@
         #medizininformatik {
             border-radius: 12px;
             background: radial-gradient(rgb(204, 200, 199), #fff);
-        }
-
-        .medinfo {
-            background-position: 500px 250px;
-            background-size: 80%;
-        }
-
-        .bioinfo {
-            background-position: 250px 0px;
         }
 
         .desc_title {
@@ -115,7 +102,7 @@
                         <br><p>Wer sich für Informationsverarbeitung im Bereich der Lebenswissenschaften interressiert, oder  eine Forschungskarriere im Bereich Pharmaindustrie, Biotechnologie, Biologie, oder Informatik anstrebt, sollte sich genauer mit dem Studiengang beschäftigen.</p>
                     </div>
                 </span>
-                <div class="image bioinfo" style="background-image: url('../Images/bioinfo.jpg')"></div>
+                <img class="image bioinfo" src="../Images/bioinfo.jpg">
             </li>
             <li id="informatik">
                 <span>
@@ -126,7 +113,7 @@
                         <br><p>Der Studiengang der Informatik ist besonders geeignet für jeden, der sich für Informationsverarbeitung interressiert, sowie ein Verständnis für Mathematik, logisches Denken und Abstraktionsvermögen aufweisen kann.</p>
                     </div>
                 </span>
-                <div class="image" style="background-image: url('../Images/informatik.jpg');"></div>
+                <img class="image info" src="../Images/informatik.jpg">
             </li>
             <li id="medizininformatik">
                 <span>
@@ -137,7 +124,7 @@
                         <br><p>Die Zielgruppe des Studiums der Medizininformatik besteht aus Allen, die sich für Informationsverarbeitung im Gesundheitswesen interessieren, oder eine Forschungskarriere im Bereich der medizinischen Informatik anstreben. </p>
                     </div>
                 </span>
-                <div class="image medinfo" style="background-image: url('../Images/medinfo.jpeg')"></div>
+                <img class="image medinfo" src="../Images/medinfo.jpeg">
             </li>
         </ul>
     </main>
