--- a/faecher/faecher.html
+++ b/faecher/faecher.html
@@ -5,9 +5,6 @@
     <title>Einstieg Erstsemester - Fächer</title>
     <link rel="stylesheet" href="../Stylesheets/style.css">
     <style>
-        main {
-            margin-bottom: 5em;
-        }
 
         main ul {
             list-style-type: none;
@@ -66,7 +63,7 @@
     <a href="../index.html"><img src="../Images/Logo.png" id="logo"></a>
     <nav>
         <ul>
-            <li class="dropdown">
+            <li class="dropdown active">
                 <a href="faecher.html" class="dropbtn">Fächer</a>
                 <div class="dropdown_content">
                     <a href="bioinformatik.html">Bioinformatik</a>
