--- a/faecher/informatik.html
+++ b/faecher/informatik.html
@@ -4,13 +4,41 @@
     <meta charset="UTF-8">
     <title>Einstieg Erstsemester - Informatik</title>
     <link rel="stylesheet" href="../Stylesheets/style.css">
+    <style>
+
+        body {
+            background: linear-gradient(white 20%, rgba(231, 219, 160, 0.7) 95%, white, white);
+            width: 100vw;
+        }
+
+        main {
+            margin-top: 1em;
+        }
+
+        #text {
+            float: left;
+            width: 40%;
+            margin-left: 2em;
+            margin-top: 2em;
+        }
+
+        .image {
+            height: 20em;
+            margin-left: 3em;
+        }
+
+        #stundenplan th {
+            background-color: rgb(231, 216, 142);
+            color: white;
+        }
+    </style>
 </head>
 <body>
 <header>
     <a href="../index.html"><img src="../Images/Logo.png" id="logo"></a>
     <nav>
         <ul>
-            <li class="dropdown">
+            <li class="dropdown active">
                 <a href="faecher.html" class="dropbtn">Fächer</a>
                 <div class="dropdown_content">
                     <a href="bioinformatik.html">Bioinformatik</a>
@@ -34,11 +62,121 @@
     </nav>
 </header>
 <content>
+    <h1>Informatik</h1>
     <main>
+        <div id="text">
+            <h2>Beschreibung</h2>
+            <p>Das Studium der Informatik beschäftigt sich größtenteils  mit Inhalten der allgemeinen, praktischen, theoretischen und technischen Informatik, sowie der Mathematik. Vermittelt werden außerdem Kenntnisse in einem wählbaren Anwendungsbereich.</p>
+            <br><p>Regelstudienzeit sind 6 Semester. Studienbeginn ist sowohl im Wintersemester, als auch im Sommersemester möglich.</p>
+            <br><p>Der Studiengang der Informatik ist besonders geeignet für jeden, der sich für Informationsverarbeitung interressiert, sowie ein Verständnis für Mathematik, logisches Denken und Abstraktionsvermögen aufweisen kann.</p>
+        </div>
+        <img class="image" src="../Images/informatik.jpg">
+        <div id="stundenplan">
+            <h2>Stundenplan – Erstes Semester</h2>
+            <table>
+                <tr>
+                    <th>Zeit</th>
+                    <th>Montag</th>
+                    <th>Dienstag</th>
+                    <th>Mittwoch</th>
+                    <th>Donnerstag</th>
+                    <th>Freitag</th>
+                </tr>
+                <tr>
+                    <td>08:00 - 10:00</td>
+                    <td>
+                        <p>Mathe 1</p>
+                        <div class="popup">
+                            <p><strong>Dozent:</strong> Luxburg</p>
+                            <p><strong>Uhrzeit:</strong> 08:15 – 10:00</p>
+                            <p><strong>Klausur:</strong> 12. Februar 2018</p>
+                        </div>
+                    </td>
+                    <td></td>
+                    <td>
+                        <p>Mathe 1</p>
+                        <div class="popup">
+                            <p><strong>Dozent:</strong> Luxburg</p>
+                            <p><strong>Uhrzeit:</strong> 08:15 – 10:00</p>
+                            <p><strong>Klausur:</strong> 12. Februar 2018</p>
+                        </div>
+                    </td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>10:00 - 12:00</td>
+                    <td>
+                        <p>Einführung Technische Informatik</p>
+                        <div class="popup">
+                            <p><strong>Dozent:</strong> Bringmann</p>
+                            <p><strong>Uhrzeit:</strong> 10:15 – 12:00</p>
+                            <p><strong>Klausur:</strong> 16. Februar 2018</p>
+                        </div>
+                    </td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>12:00 - 14:00</td>
+                    <td></td>
+                    <td></td>
+                    <td>
+                        <p>Einführung Technische Informatik</p>
+                        <div class="popup">
+                            <p><strong>Dozent:</strong> Bringmann</p>
+                            <p><strong>Uhrzeit:</strong> 13:15 – 14:00</p>
+                            <p><strong>Klausur:</strong> 16. Februar 2018</p>
+                        </div>
+                    </td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>14:00 - 16:00</td>
+                    <td></td>
+                    <td>
+                        <p>Informatik 1</p>
+                        <div class="popup">
+                            <p><strong>Dozent:</strong> Ostermann</p>
+                            <p><strong>Uhrzeit:</strong> 14:15 – 16:00</p>
+                            <p><strong>Klausur:</strong> 06. Februar 2018</p>
+                        </div>
+                    </td>
+                    <td></td>
+                    <td>
+                        <p>Informatik 1</p>
+                        <div class="popup">
+                            <p><strong>Dozent:</strong> Ostermann</p>
+                            <p><strong>Uhrzeit:</strong> 14:15 – 16:00</p>
+                            <p><strong>Klausur:</strong> 06. Februar 2018</p>
+                        </div>
+                    </td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>16:00 - 18:00</td>
+                    <td></td>
+                    <td></td>
+                    <td>
+                        <p>Studium Professionale*</p>
+                    </td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+            <span id="zusatzinfos">
+                <p>Anmerkung: Hinzu kommen noch Übungen und Übungsgruppen für die jeweiligen Fächer.</p>
+                *Zusätzlich haben Informatiker im ersten Semester ein Studium Professionale im Umfang von 6 ECTS.
+            </span>
+        </div>
     </main>
 </content>
 <footer>
     <a href="../impressum.html">Kontakt</a>
 </footer>
+<div id="background"></div>
 </body>
 </html>
