--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Einstieg Erstsemester</title>
     <link rel="stylesheet" href="Stylesheets/style.css">
     <style>
+        html, body {overflow: hidden}
+
         #bg-image {
-            padding: 40vh 0;
+            padding: 30% 0;
             background-image: url("Images/Campus.jpg");
             background-size: cover;
             background-attachment: fixed;
@@ -15,32 +17,22 @@
 
         #information {
             position: absolute;
-            background-color: rgba(255,255,255,0.9);
-            top: 15em;
+            background-color: rgba(255,255,255,0.8);
+            top: 10em;
             left: 8em;
             padding: 1em;
             border: 1px solid black;
             border-radius: 5px;
             font-family: sans-serif;
             font-size: 1em;
-            width: 25em;
+            width: 40%;
         }
 
         #text {
-            padding: 1em;
-            width: 50%;
-            margin-left: 2em;
-            margin-bottom: 5em;
-            float: left;
         }
 
         main ul li {
             margin: 1em;
-        }
-
-        #kupferbau {
-            width: 30%;
-            margin: 2em;
         }
     </style>
 </head>
@@ -77,21 +69,20 @@
         <div id="first_section">
             <div id="bg-image"></div>
             <div id="information">
-                <h3>Herzlich willkommen!</h3><br>
-                <p>Hier auf unserer Website „Einstieg – Erstsemester“ findest du Informationen, die dir die ersten Monate des Studentenlebens, als auch den Weg dorthin, erleichtern sollen.</p>
+                <h2>Herzlich willkommen!</h2><br>
+                <p>Hier auf unserer Website „Einstieg – Erstsemester“ findest du Informationen, die dir die ersten Monate des Studentenlebens, als auch den Weg dorthin, erleichtern sollen.</p><br>
+                <div id="text">
+                    <h3>Die Website richtet sich an alle Studierenden und Studieninteressierte der Medizininformatik, Bioinformatik und Informatik.</h3><br>
+                    <p>Wir bieten Informationen über:</p>
+                    <ul>
+                        <li>Organisation des Studiums</li>
+                        <li>Studieninhalte der Bioinformatik, Medizininformatik und Informatik</li>
+                        <li>Ansprechpartner bei Problemen</li>
+                        <li>Für das Studium relevante Gebäude</li>
+                    </ul>
+                </div>
             </div>
         </div>
-        <div id="text">
-            <h2>Die Website richtet sich an alle Studierenden und Studieninteressierte der Medizininformatik, Bioinformatik und Informatik.</h2><br>
-            <p>Wir bieten Informationen über:</p><br>
-            <ul>
-                <li>Organisation des Studiums</li>
-                <li>Studieninhalte der Bioinformatik, Medizininformatik und Informatik</li>
-                <li>Ansprechpartner bei Problemen</li>
-                <li>Für das Studium relevante Gebäude</li>
-            </ul>
-        </div>
-        <img src="Images/Kupferbau.jpg" id="kupferbau">
     </main>
 </content>
 <footer>
