--- a/organisation/organisation.html
+++ b/organisation/organisation.html
@@ -2,9 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Einstieg Erstsemester - Informatik</title>
+    <link rel="stylesheet" href="../Stylesheets/style.css">
+    <style>
+    </style>
 </head>
 <body>
+<header>
+    <a href="../index.html"><img src="../Images/Logo.png" id="logo"></a>
+    <nav>
+        <ul>
+            <li class="dropdown">
+                <a href="faecher.html" class="dropbtn">Fächer</a>
+                <div class="dropdown_content">
+                    <a href="bioinformatik.html">Bioinformatik</a>
+                    <a href="informatik.html">Informatik</a>
+                    <a href="medizininformatik.html">Medizininformatik</a>
+                </div>
+            </li>
+            <li class="dropdown active">
+                <a href="../organisation/organisation.html" class="dropbtn">Organisation</a>
+            </li>
+            <li class="dropdown">
+                <a href="../organisation/organisation.html" class="dropbtn">Klausurinfo</a>
+            </li>
+            <li class="dropdown">
+                <a href="../organisation/organisation.html" class="dropbtn">Ansprechpartner</a>
+            </li>
+            <li class="dropdown">
+                <a href="../gebaeude.html" class="dropbtn">Gebäude</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+<content>
+    <h1>Organisation</h1>
+    <main>
 
+    </main>
+</content>
+<footer>
+    <a href="../impressum.html">Kontakt</a>
+</footer>
+<div id="background"></div>
 </body>
 </html>
