--- a/organisation/organisation.html
+++ b/organisation/organisation.html
@@ -13,15 +13,15 @@
     <nav>
         <ul>
             <li class="dropdown">
-                <a href="faecher.html" class="dropbtn">Fächer</a>
+                <a href="../faecher/faecher.html" class="dropbtn">Fächer</a>
                 <div class="dropdown_content">
-                    <a href="bioinformatik.html">Bioinformatik</a>
-                    <a href="informatik.html">Informatik</a>
-                    <a href="medizininformatik.html">Medizininformatik</a>
+                    <a href="../faecher/bioinformatik.html">Bioinformatik</a>
+                    <a href="../faecher/informatik.html">Informatik</a>
+                    <a href="../faecher/medizininformatik.html">Medizininformatik</a>
                 </div>
             </li>
             <li class="dropdown active">
-                <a href="../organisation/organisation.html" class="dropbtn">Organisation</a>
+                <a href="organisation.html" class="dropbtn">Organisation</a>
             </li>
             <li class="dropdown">
                 <a href="../organisation/organisation.html" class="dropbtn">Klausurinfo</a>
