--- a/faecher/faecher.html
+++ b/faecher/faecher.html
@@ -60,7 +60,7 @@
 </head>
 <body>
 <header>
-    <a href="../index.html"><img src="../Images/Logo.png" id="logo"></a>
+    <a href="../index.html"><img src="../Images/logo.svg" id="logo"></a>
     <nav>
         <ul>
             <li class="dropdown active">
@@ -105,7 +105,7 @@
                 <span>
                     <div class="desc_title"><a href="informatik.html">Informatik</a></div>
                     <div class="description">
-                        <p>Das Studium der Informatik beschäftigt sich größtenteils  mit Inhalten der allgemeinen, praktischen, theoretischen und technischen Informatik, sowie der Mathematik. Vermittelt werden außerdem Kenntnisse in einem wählbaren Anwendungsbereich.</p>
+                        <p>Das Studium der Informatik beschäftigt sich größtenteils  mit Inhalten der allgemeinen, praktischen, theoretischen und technischen Informatik, sowie der Mathematik.  Vermittelt werden außerdem Kenntnisse in einem wählbaren Anwendungsbereich.</p>
                         <br><p>Regelstudienzeit sind 6 Semester. Studienbeginn ist sowohl im Wintersemester, als auch im Sommersemester möglich.</p>
                         <br><p>Der Studiengang der Informatik ist besonders geeignet für jeden, der sich für Informationsverarbeitung interressiert, sowie ein Verständnis für Mathematik, logisches Denken und Abstraktionsvermögen aufweisen kann.</p>
                     </div>
