--- a/faecher/informatik.html
+++ b/faecher/informatik.html
@@ -19,7 +19,6 @@
             float: left;
             width: 40%;
             margin-left: 2em;
-            margin-top: 2em;
         }
 
         .image {
@@ -35,7 +34,7 @@
 </head>
 <body>
 <header>
-    <a href="../index.html"><img src="../Images/Logo.png" id="logo"></a>
+    <a href="../index.html"><img src="../Images/logo.svg" id="logo"></a>
     <nav>
         <ul>
             <li class="dropdown active">
@@ -64,13 +63,24 @@
 <content>
     <h1>Informatik</h1>
     <main>
-        <div id="text">
-            <h2>Beschreibung</h2>
-            <p>Das Studium der Informatik beschäftigt sich größtenteils  mit Inhalten der allgemeinen, praktischen, theoretischen und technischen Informatik, sowie der Mathematik. Vermittelt werden außerdem Kenntnisse in einem wählbaren Anwendungsbereich.</p>
-            <br><p>Regelstudienzeit sind 6 Semester. Studienbeginn ist sowohl im Wintersemester, als auch im Sommersemester möglich.</p>
-            <br><p>Der Studiengang der Informatik ist besonders geeignet für jeden, der sich für Informationsverarbeitung interressiert, sowie ein Verständnis für Mathematik, logisches Denken und Abstraktionsvermögen aufweisen kann.</p>
+        <div id="information">
+            <div id="text">
+                <h2>Beschreibung</h2>
+                <p>Das Studium der Informatik beschäftigt sich größtenteils  mit Inhalten der allgemeinen, praktischen, theoretischen und technischen Informatik, sowie der Mathematik.  Vermittelt werden außerdem Kenntnisse in einem wählbaren Anwendungsbereich.</p>
+                <p>Der Studiengang beinhaltet vergleichsweise viele Wahlfächer und kann somit nach eigenem Interesse angepasst.</p><br>
+                <p>Kurse können in Form von Vorlesungen, Seminaren, Übungen und Praktika stattfinden.</p><br>
+                <p>Der Studiengang der Informatik ist besonders geeignet für jeden, der sich für Informationsverarbeitung interessiert, sowie ein Verständnis für Mathematik, logisches Denken und Abstraktionsvermögen aufweisen kann.</p><br>
+                <h2>Allgemeine Daten</h2>
+                <p>Studienbeginn: Winter – oder Sommersemester</p><br>
+                <p>Abschluss: Bachelor of Science</p><br>
+                <p>Zulassungsbeschränkt: Nein</p><br>
+                <p>Regelstudienzeit: 6 Semester</p><br>
+                <h2>Berufsperspektiven</h2>
+                <p>Durch eine stetig wachsende IT-Branche gelten die Jobchancen von Informatikern als sehr gut.</p><br>
+                <p>Durch die fortschreitende Digitalisierung werden auch weiterhin gute Berufsperspektiven vorrausgesagt.</p>
+            </div>
+            <img class="image" src="../Images/informatik.jpg">
         </div>
-        <img class="image" src="../Images/informatik.jpg">
         <div id="stundenplan">
             <h2>Stundenplan – Erstes Semester</h2>
             <table>
