--- a/faecher/medizininformatik.html
+++ b/faecher/medizininformatik.html
@@ -19,7 +19,6 @@
             float: left;
             width: 40%;
             margin-left: 2em;
-            margin-top: 2em;
         }
 
         .image {
@@ -35,7 +34,7 @@
 </head>
 <body>
 <header>
-    <a href="../index.html"><img src="../Images/Logo.png" id="logo"></a>
+    <a href="../index.html"><img src="../Images/logo.svg" id="logo"></a>
     <nav>
         <ul>
             <li class="dropdown active">
@@ -64,13 +63,24 @@
 <content>
     <h1>Medizininformatik</h1>
     <main>
-        <div id="text">
-            <h2>Beschreibung</h2>
-            <p>Der Studiengang der Medizininformatik vermittelt hauptsächlich Grundlagen der Informatik, Mathematik, Biologie und Medizin.</p>
-            <br><p>Regelstudienzeit sind 6 Semester. Studienbeginn ist nur im Wintersemester möglich.</p>
-            <br><p>Die Zielgruppe des Studiums der Medizininformatik besteht aus Allen, die sich für Informationsverarbeitung im Gesundheitswesen interessieren, oder eine Forschungskarriere im Bereich der medizinischen Informatik anstreben. </p>
+        <div id="information">
+            <div id="text">
+                <h2>Beschreibung</h2>
+                <p>Der Studiengang der Medizininformatik vermittelt hauptsächlich Grundlagen der Informatik, Mathematik, Biologie und Medizin, wobei der Mathematik eine eher untergeordnete Rolle zugeordnet wird.</p><br>
+                <p>Die Kurse des 6-semestrigen Studiums sind bis zum 4. Semester komplett festgelegt.  Ab dem 5. Semester können einige Schwerpunkte nach eigenem Interesse gesetzt werden.</p><br>
+                <p>Kurse können sowohl als Vorlesungen, Seminare, Übungen und Praktika stattfinden.</p><br>
+                <p>Die Zielgruppe des Studiums der Medizininformatik besteht aus Allen, die sich für Informationsverarbeitung im Gesundheitswesen interessieren, oder eine Forschungskarriere im Bereich der medizinischen Informatik anstreben.</p><br>
+                <h2>Allgemeine Daten</h2>
+                <p>Studienbeginn: Wintersemester</p><br>
+                <p>Abschluss: Bachelor of Science</p><br>
+                <p>Zulassungsbeschränkt: Ja</p><br>
+                <p>Regelstudienzeit: 6 Semester</p><br>
+                <h2>Berufsperspektiven</h2>
+                <p>Prinzipiell können Medizininformatiker in allen Bereichen der IT-Branche arbeiten. Insbesondere können Absolventen in der medizinischen Datenverarbeitung eingesetzt werden.</p><br>
+                <p>Eine weitere Möglichkeit ist die Vertiefung der Kompetenzen im Masterstudiengang der Medizininformatik, anderen Masterstudiengängen der Informatik, oder medizinnahen Masterstudiengängen.</p>
+            </div>
+            <img class="image" src="../Images/medinfo.jpeg">
         </div>
-        <img class="image" src="../Images/medinfo.jpeg" style="margin-left: 5em">
         <div id="stundenplan">
             <h2>Stundenplan – Erstes Semester</h2>
             <table>
