--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 <header>
-    <a href="index.html"><img src="Images/Logo.png" id="logo"></a>
+    <a href="index.html"><img src="Images/logo.svg" id="logo"></a>
     <nav>
         <ul>
             <li class="dropdown">
