--- a/organisation/organisation.html
+++ b/organisation/organisation.html
@@ -5,11 +5,34 @@
     <title>Einstieg Erstsemester - Informatik</title>
     <link rel="stylesheet" href="../Stylesheets/style.css">
     <style>
+        @import url('https://fonts.googleapis.com/css?family=Cantarell');
+
+        .section {
+            width: 45%;
+            padding: 2em;
+            float: left;
+            margin-bottom: 3em;
+        }
+
+        .section ul {
+            padding-left: 1.5em;
+        }
+
+        h2 {
+            font-family: 'Courgette', cursive;
+        }
+
+        #attention {
+            background: rgba(255, 0, 0, 0.08);
+            border: 1px solid rgba(0, 0, 0, 0.12);
+            border-radius: 12px;
+            padding: 1em;
+        }
     </style>
 </head>
 <body>
 <header>
-    <a href="../index.html"><img src="../Images/Logo.png" id="logo"></a>
+    <a href="../index.html"><img src="../Images/logo.svg" id="logo"></a>
     <nav>
         <ul>
             <li class="dropdown">
@@ -35,12 +58,45 @@
         </ul>
     </nav>
 </header>
-<content>
-    <h1>Organisation</h1>
-    <main>
-
-    </main>
-</content>
+<main>
+<h1>Organisation</h1>
+    <div class="section">
+        <h2>Immatrikulation</h2><br>
+        <p>Die erste Hürde zu einem erfolgreichen Einstieg ins Studium ist die Immatrikulation.</p><br>
+        <p>Die Immatrikulation erfolgt über das Bewerbungsportal ALMA. Dort findet ihr genauere Informationen zur
+            Immatrikulation und Bewerbung und könnt außerdem jederzeit den Status eurer Immatrikulation einsehen.</p>
+        <br>
+        <p>Dabei ist es wichtig rechtzeitig seine Bewerbung einzureichen. Die Fristen zur Einschreibung findet ihr unter
+            (<a href="http://www.uni-tuebingen.de/studium/bewerbung-und-immatrikulation/immatrikulation/erforderliche-nachweise-fuer-die-immatrikulation.html#c321117">Nachweise
+                für die Immatrikulation</a>).</p><br>
+        <p>Der Bewerbung müssen dabei folgende Unterlagen beiliegen:</p><br>
+        <ul>
+            <li>Kopie des Personalausweis</li>
+            <li>Bescheinigung einer Krankenversicherung</li>
+            <li>Nachweis der Hochschulzugangsberechtigung</li>
+            <li>Passfoto</li>
+            <li>Nachweis der Teilnahme am Studienorientierungsverfahren</li>
+            <li>für Bio – und Medizininformatik: Zulassungsbescheid</li>
+        </ul>
+        <br>
+        <p>Um den Zulassungsbescheid zu erhalten muss man bei ALMA einen Zulassungsantrag stellen.</p><br>
+        <p>Das gilt nur für Bio – und Medizininformatik, bei dem Studiengang Informatik ist eine direkte Bewerbung
+            möglich.</p><br>
+        <p>Wenn ihr euren Immatrikulationsantrag dann eingereicht habt, erhaltet ihr einige Wochen später den Bescheid
+            der Immatrikulation per Post.</p>
+    </div>
+    <div class="section">
+        <h2>Studiengebühr</h2><br>
+        <p>Die Semesterbeiträge belaufen sich aktuell auf 153,80€, und sollten bis zum 15.2.2018 beglichen werden.</p><br>
+        <p>Der Semesterbeitrag setzt sich aus dem Beitrag zum Studierendenwerk, den Verwaltungskosten und dem Studierendenschaftsbeitrag zusammen. Genauere Informationen unter: <a href="https://www.uni-tuebingen.de/studium/studienorganisation/beitraege-und-gebuehren/semesterbeitraege.html">Semesterbeiträge</a></p>
+    </div>
+    <div class="section">
+        <h2>Semesterticket</h2><br>
+        <p>Ein großer Vorteil des Studentenlebens ist das Semesterticket. Mit ihm könnt ihr alle Busse und Bahnen im naldo-Gebiet nutzen. </p><br>
+        <p>Das Semesterticket kostet 89,70€ und ist online, sowie an Schaltern der Busbahnhöfe erhältlich.  Um das Semesterticket zu erhalten, muss der Studierendenausweis (mit gültigem Aufdruck), sowie die Bescheinigung für das Semesterticket vorgelgt werden.</p><br>
+        <p id="attention">Wichtig: Beim Fahren mit dem Semesterticket muss zudem immer der Studentenausweis mitgefühhrt werden.</p>
+    </div>
+</main>
 <footer>
     <a href="../impressum.html">Kontakt</a>
 </footer>
