--- a/faecher/faecher.html
+++ b/faecher/faecher.html
@@ -75,10 +75,10 @@
                 <a href="../organisation/organisation.html" class="dropbtn">Organisation</a>
             </li>
             <li class="dropdown">
-                <a href="../organisation/organisation.html" class="dropbtn">Klausurinfo</a>
+                <a href="../klausurinfo.html" class="dropbtn">Klausurinfo</a>
             </li>
             <li class="dropdown">
-                <a href="../organisation/organisation.html" class="dropbtn">Ansprechpartner</a>
+                <a href="../ansprechpartner.html" class="dropbtn">Ansprechpartner</a>
             </li>
             <li class="dropdown">
                 <a href="../gebaeude.html" class="dropbtn">Gebäude</a>
