--- a/organisation/organisation.html
+++ b/organisation/organisation.html
@@ -7,11 +7,20 @@
     <style>
         @import url('https://fonts.googleapis.com/css?family=Cantarell');
 
+        body {
+            background: linear-gradient(white 20%, rgba(199, 195, 193, 0.82) 95%, white, white);
+            width: 100vw;
+        }
+
         .section {
             width: 45%;
-            padding: 2em;
+            padding-left: 2em;
+            padding-top: 2em;
             float: left;
-            margin-bottom: 3em;
+        }
+
+        #text {
+            margin-bottom: 45em;
         }
 
         .section ul {
@@ -24,6 +33,13 @@
 
         #attention {
             background: rgba(255, 0, 0, 0.08);
+            border: 1px solid rgba(0, 0, 0, 0.12);
+            border-radius: 12px;
+            padding: 1em;
+        }
+
+        #important {
+            background: rgba(100, 240, 101, 0.25);
             border: 1px solid rgba(0, 0, 0, 0.12);
             border-radius: 12px;
             padding: 1em;
@@ -47,10 +63,10 @@
                 <a href="organisation.html" class="dropbtn">Organisation</a>
             </li>
             <li class="dropdown">
-                <a href="../organisation/organisation.html" class="dropbtn">Klausurinfo</a>
+                <a href="../klausurinfo.html" class="dropbtn">Klausurinfo</a>
             </li>
             <li class="dropdown">
-                <a href="../organisation/organisation.html" class="dropbtn">Ansprechpartner</a>
+                <a href="../ansprechpartner.html" class="dropbtn">Ansprechpartner</a>
             </li>
             <li class="dropdown">
                 <a href="../gebaeude.html" class="dropbtn">Gebäude</a>
@@ -59,42 +75,57 @@
     </nav>
 </header>
 <main>
-<h1>Organisation</h1>
-    <div class="section">
-        <h2>Immatrikulation</h2><br>
-        <p>Die erste Hürde zu einem erfolgreichen Einstieg ins Studium ist die Immatrikulation.</p><br>
-        <p>Die Immatrikulation erfolgt über das Bewerbungsportal ALMA. Dort findet ihr genauere Informationen zur
-            Immatrikulation und Bewerbung und könnt außerdem jederzeit den Status eurer Immatrikulation einsehen.</p>
-        <br>
-        <p>Dabei ist es wichtig rechtzeitig seine Bewerbung einzureichen. Die Fristen zur Einschreibung findet ihr unter
-            (<a href="http://www.uni-tuebingen.de/studium/bewerbung-und-immatrikulation/immatrikulation/erforderliche-nachweise-fuer-die-immatrikulation.html#c321117">Nachweise
-                für die Immatrikulation</a>).</p><br>
-        <p>Der Bewerbung müssen dabei folgende Unterlagen beiliegen:</p><br>
-        <ul>
-            <li>Kopie des Personalausweis</li>
-            <li>Bescheinigung einer Krankenversicherung</li>
-            <li>Nachweis der Hochschulzugangsberechtigung</li>
-            <li>Passfoto</li>
-            <li>Nachweis der Teilnahme am Studienorientierungsverfahren</li>
-            <li>für Bio – und Medizininformatik: Zulassungsbescheid</li>
-        </ul>
-        <br>
-        <p>Um den Zulassungsbescheid zu erhalten muss man bei ALMA einen Zulassungsantrag stellen.</p><br>
-        <p>Das gilt nur für Bio – und Medizininformatik, bei dem Studiengang Informatik ist eine direkte Bewerbung
-            möglich.</p><br>
-        <p>Wenn ihr euren Immatrikulationsantrag dann eingereicht habt, erhaltet ihr einige Wochen später den Bescheid
-            der Immatrikulation per Post.</p>
-    </div>
-    <div class="section">
-        <h2>Studiengebühr</h2><br>
-        <p>Die Semesterbeiträge belaufen sich aktuell auf 153,80€, und sollten bis zum 15.2.2018 beglichen werden.</p><br>
-        <p>Der Semesterbeitrag setzt sich aus dem Beitrag zum Studierendenwerk, den Verwaltungskosten und dem Studierendenschaftsbeitrag zusammen. Genauere Informationen unter: <a href="https://www.uni-tuebingen.de/studium/studienorganisation/beitraege-und-gebuehren/semesterbeitraege.html">Semesterbeiträge</a></p>
-    </div>
-    <div class="section">
-        <h2>Semesterticket</h2><br>
-        <p>Ein großer Vorteil des Studentenlebens ist das Semesterticket. Mit ihm könnt ihr alle Busse und Bahnen im naldo-Gebiet nutzen. </p><br>
-        <p>Das Semesterticket kostet 89,70€ und ist online, sowie an Schaltern der Busbahnhöfe erhältlich.  Um das Semesterticket zu erhalten, muss der Studierendenausweis (mit gültigem Aufdruck), sowie die Bescheinigung für das Semesterticket vorgelgt werden.</p><br>
-        <p id="attention">Wichtig: Beim Fahren mit dem Semesterticket muss zudem immer der Studentenausweis mitgefühhrt werden.</p>
+    <h1>Organisation</h1>
+    <div id="text">
+        <div class="section">
+            <h2>Immatrikulation</h2><br>
+            <p>Die erste Hürde zu einem erfolgreichen Einstieg ins Studium ist die Immatrikulation.</p><br>
+            <p>Die Immatrikulation erfolgt über das Bewerbungsportal ALMA. Dort findet ihr genauere Informationen zur
+                Immatrikulation und Bewerbung und könnt außerdem jederzeit den Status eurer Immatrikulation
+                einsehen.</p>
+            <br>
+            <p>Dabei ist es wichtig rechtzeitig seine Bewerbung einzureichen. Die Fristen zur Einschreibung findet ihr
+                unter
+                (<a href="http://www.uni-tuebingen.de/studium/bewerbung-und-immatrikulation/immatrikulation/erforderliche-nachweise-fuer-die-immatrikulation.html#c321117">Nachweise
+                    für die Immatrikulation</a>).</p><br>
+            <p>Der Bewerbung müssen dabei folgende Unterlagen beiliegen:</p><br>
+            <ul>
+                <li>Kopie des Personalausweis</li>
+                <li>Bescheinigung einer Krankenversicherung</li>
+                <li>Nachweis der Hochschulzugangsberechtigung</li>
+                <li>Passfoto</li>
+                <li>Nachweis der Teilnahme am Studienorientierungsverfahren</li>
+                <li>für Bio – und Medizininformatik: Zulassungsbescheid</li>
+            </ul>
+            <br>
+            <p>Um den Zulassungsbescheid zu erhalten muss man bei ALMA einen Zulassungsantrag stellen.</p><br>
+            <p>Das gilt nur für Bio – und Medizininformatik, bei dem Studiengang Informatik ist eine direkte Bewerbung
+                möglich.</p><br>
+            <p>Wenn ihr euren Immatrikulationsantrag dann eingereicht habt, erhaltet ihr einige Wochen später den
+                Bescheid
+                der Immatrikulation per Post.</p>
+        </div>
+        <div class="section">
+            <h2>Studiengebühr</h2><br>
+            <p>Die Semesterbeiträge belaufen sich aktuell auf 153,80€, und sollten bis zum 15.2.2018 beglichen
+                werden.</p><br>
+            <p>Der Semesterbeitrag setzt sich aus dem Beitrag zum Studierendenwerk, den Verwaltungskosten und dem
+                Studierendenschaftsbeitrag zusammen. Genauere Informationen unter: <a
+                        href="https://www.uni-tuebingen.de/studium/studienorganisation/beitraege-und-gebuehren/semesterbeitraege.html">Semesterbeiträge</a>
+            </p>
+        </div>
+        <div class="section">
+            <h2>Semesterticket</h2><br>
+            <p>Ein großer Vorteil des Studentenlebens ist das Semesterticket. Mit ihm könnt ihr alle Busse und Bahnen im
+                naldo-Gebiet nutzen. </p><br>
+            <p>Das Semesterticket kostet 89,70€ und ist online, sowie an Schaltern der Busbahnhöfe erhältlich.  Um das
+                Semesterticket zu erhalten, muss der Studierendenausweis (mit gültigem Aufdruck), sowie die
+                Bescheinigung für das Semesterticket vorgelgt werden.</p><br>
+            <p></p>
+            <p id="attention">Wichtig: Beim Fahren mit dem Semesterticket muss zudem immer der Studentenausweis
+                mitgefühhrt werden.</p><br>
+            <p id="important">Für alle Studenten ohne Semesterticket gibt es eine sogenannte "Freizeitregelung":<br>Gegen Vorlage des Studierendenausweises könnt ihr montags bis freitags ab 19 Uhr sowie an Samstagen, Sonntagen, an gesetzlichen Feiertagen in Baden-Württemberg sowie am 24.12. und 31.12. ganztägig, jeweils bis Betriebsschluss einschließlich Nachtverkehr im naldo-Nahverkehrsbereich Bus und Bahn ohne zusätzliches Ticket fahren.</p>
+        </div>
     </div>
 </main>
 <footer>
