--- a/organisation/organisation.html
+++ b/organisation/organisation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Einstieg Erstsemester - Informatik</title>
+    <title>Einstieg Erstsemester - Organisation</title>
     <link rel="stylesheet" href="../Stylesheets/style.css">
     <style>
         @import url('https://fonts.googleapis.com/css?family=Cantarell');
