--- a/ansprechpartner.html
+++ b/ansprechpartner.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Einstieg Erstsemester - Informatik</title>
+    <title>Einstieg Erstsemester - Ansprechpartner</title>
     <link rel="stylesheet" href="Stylesheets/style.css">
     <style>
 
